examples/errors/immutable_reassignment.flx
// Error Example: Reassigning immutable variable
// Expected Error: [|E002|] Compiler error: immutable binding
//
// This demonstrates trying to reassign an immutable variable.

let x = 10
x = 20  // Error: assignment to immutable binding
print(x)
